--- a/notebooks/day_01/day_01.ipynb
+++ b/notebooks/day_01/day_01.ipynb
@@ -46,7 +46,9 @@
      "languageId": "plaintext"
     }
    },
-   "source": []
+   "source": [
+    "Nextflow is a global community collaborating to build open-source Nextflow components and pipelines. ((https://nf-co.re))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +60,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "139 (https://nf-co.re/pipelines/)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +74,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "On first glance, all available pipelines seem to have a bioinformatics application."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +88,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A pipeline is a set/block of connected algorithms that are executed in a predefined order. It can be used to analyze data of different kinds efficiently and in a reproducible way. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,7 +102,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "nf-core aims to follow the FAIR principles, data should be:\n",
+    "\n",
+    "- Findable\n",
+    "- Accesible\n",
+    "- Interoperable\n",
+    "- Reusable\n",
+    "\n",
+    "By providing quality, standardized and reproduble pipeplines for different kinds of bioinformatics tasks, the user ensures that the analyzed data will follow these."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,13 +150,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Pipeline: nf-core/differentialabundance"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/nilswaffenschmidt/waffenschmidt/notebooks/day_01\n"
+     ]
+    }
+   ],
    "source": [
     "# run the pipeline in a cell \n",
     "# to run bash in jupyter notebooks, simply use ! before the command\n",
@@ -161,7 +188,14 @@
     "# make sure to specify the version you want to use (use the latest one)\n",
     "\n",
     "\n",
-    "!nextflow run ..."
+    "!nextflow run nf-core/differentialabundance -profile test,docker --outdir notebooks/day_01/output/run_1/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Took 16 min"
    ]
   },
   {
@@ -170,7 +204,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# repeat the run. What did change?\n"
+    "# repeat the run. What did change?\n",
+    "\n",
+    "!nextflow run nf-core/differentialabundance -profile test,docker --outdir notebooks/day_01/output/run_2/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Completed at: 29-Sep-2025 14:02:28\n",
+    "\n",
+    "Duration    : 14m 17s\n",
+    "\n",
+    "CPU hours   : 0.3\n",
+    "\n",
+    "Succeeded   : 21"
    ]
   },
   {
@@ -179,7 +228,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now set -resume to the command. What did change?\n"
+    "# now set -resume to the command. What did change?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Completed at: 29-Sep-2025 14:12:34\n",
+    "\n",
+    "Duration    : 3m 13s\n",
+    "\n",
+    "CPU hours   : 0.3 (69,6% cached)\n",
+    "\n",
+    "Succeeded   : 3\n",
+    "\n",
+    "Cached      : 18"
    ]
   },
   {
@@ -248,7 +313,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "compWorkflows",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
