Lorena nicht Boss

--- a/notebooks/day_02/day_02.ipynb
+++ b/notebooks/day_02/day_02.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "15       ?  SRR23195520     True    False       Sal     Sham"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,10 +607,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Pulling nf-core/fetchngs ...\n",
+      "WARN: Cannot read project manifest -- Cause: API rate limit exceeded -- Provide your GitHub user name and password to get a higher rate limit\n",
+      "API rate limit exceeded -- Provide your GitHub user name and password to get a higher rate limit\n"
+     ]
+    }
+   ],
    "source": [
-    "!"
+    "!nextflow run nf-core/fetchngs --input /Users/nilswaffenschmidt/waffenschmidt/notebooks/day_02/ids.csv -profile docker,arm --max_memory \"4GB\" --outdir /Users/nilswaffenschmidt/waffenschmidt/notebooks/day_02/nf_output"
    ]
   },
   {
@@ -620,6 +635,20 @@
     "While your files are downloading, get back to the paper and explain how you would try to reproduce the analysis.<br>\n",
     "When you are done with this shout, so we can discuss the different ideas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
