--- a/notebooks/day_02/day_02_part2.ipynb
+++ b/notebooks/day_02/day_02_part2.ipynb
@@ -19,7 +19,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Methods section very sparse. No version, information missing, even if we have the data, we would still lack information on how data was processed exactly. By using a standardized pipeline for anaylsis with specified and chosable parameters, we can ensure that with identical input files the final output will be identical, thus reproducible.\n",
+    "\n",
+    "Example: Write config files for your nextflow pipelines to specify inputs, etc."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -33,7 +37,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Use a rnaseq pipeline for full anaylsis from raw read files to count tables. Using nf-core we can choose nf-core/rnaseq pipeline for instance. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,7 +55,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The rnaseq pipeline consists of the following basic stages:\n",
+    "1. Pre-processing (quality control of fastqc files and adapter trimming)\n",
+    "2. Genome alignment and quantification (at genome level)\n",
+    "3. Pseudo alignment and quantification (at e.g. transcriptome level -> less resource intensive + faster)\n",
+    "4. Post processing (Normalization etc)\n",
+    "5. Final QC (Aggregation of all quality contorls)\n",
+    "\n",
+    "The main tools are:\n",
+    "- FastQC\n",
+    "- TrimGalore\n",
+    "- STAR/HISAT2/Salmon2/Kallisto\n",
+    "- SAMtools\n",
+    "- BEDtools\n",
+    "- DESeq2\n",
+    "- Kraken2\n",
+    "- MultiQC"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,11 +87,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample</th>\n",
+       "      <th>fastq_1</th>\n",
+       "      <th>fastq_2</th>\n",
+       "      <th>strandedness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SRX19144486</td>\n",
+       "      <td>./SRFetch_results/fastq/SRX19144486_SRR2319551...</td>\n",
+       "      <td>./SRFetch_results/fastq/SRX19144486_SRR2319551...</td>\n",
+       "      <td>auto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SRX19144488</td>\n",
+       "      <td>./SRFetch_results/fastq/SRX19144488_SRR2319551...</td>\n",
+       "      <td>./SRFetch_results/fastq/SRX19144488_SRR2319551...</td>\n",
+       "      <td>auto</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        sample                                            fastq_1  \\\n",
+       "0  SRX19144486  ./SRFetch_results/fastq/SRX19144486_SRR2319551...   \n",
+       "1  SRX19144488  ./SRFetch_results/fastq/SRX19144488_SRR2319551...   \n",
+       "\n",
+       "                                             fastq_2 strandedness  \n",
+       "0  ./SRFetch_results/fastq/SRX19144486_SRR2319551...         auto  \n",
+       "1  ./SRFetch_results/fastq/SRX19144488_SRR2319551...         auto  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# post here the command you used to run nf-core/rnaseq"
+    "# Import packages\n",
+    "import pandas as pd\n",
+    "\n",
+    "# post here the command you used to run nf-core/rnaseq\n",
+    "samplesheet = pd.read_csv(\"/Users/nilswaffenschmidt/waffenschmidt/notebooks/day_02/SRFetch_results/samplesheet/samplesheet.csv\")\n",
+    "samplesheet = samplesheet.iloc[:,0:3]\n",
+    "samplesheet[\"strandedness\"] = \"auto\"\n",
+    "samplesheet"
    ]
   },
   {
@@ -82,7 +173,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- -profile\n",
+    "- --input \n",
+    "- --output\n",
+    "- --genome GRCm38 "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,7 +251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "work",
+   "display_name": "compWorkflows",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
