--- a/notebooks/day_04/day_04.ipynb
+++ b/notebooks/day_04/day_04.ipynb
@@ -27,20 +27,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Workflows:\n",
+    "Workflows: In Nextflow, a workflow is a function that is specialized for composing processes and dataflow logic (i.e. channels and operators). Top level definition of pipeline specifying how different processes are conncted and how data flows between them through channels.\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "Processes:\n",
+    "Processes: In Nextflow, a process is a specialized function for executing scripts in a scalable and portable manner. It is the basic unit, executing specified tasks in forms of sripts (python, shell, programs, etc). Processes are containerized to ensure reproducibility.\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "Channels:"
+    "Channels: Specify how data is passed connecting processes with each other."
    ]
   },
   {
