--- a/notebooks/day_04/day_04.ipynb
+++ b/notebooks/day_04/day_04.ipynb
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -877,13 +877,13 @@
       "\n",
       "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
       "\u001b[K\n",
-      "Launching\u001b[35m `basics_processes.nf` \u001b[0;2m[\u001b[0;1;36mhungry_baekeland\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m45350d20bc\u001b[m\n",
+      "Launching\u001b[35m `basics_processes.nf` \u001b[0;2m[\u001b[0;1;36mstoic_bhaskara\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m45350d20bc\u001b[m\n",
       "\u001b[K\n",
       "\u001b[2mexecutor >  local (1)\u001b[m\u001b[K\n",
-      "\u001b[2m[\u001b[0;34m80/d4799c\u001b[0;2m] \u001b[0;2m\u001b[mSAYHELLO_FILE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34me1/ec81a3\u001b[0;2m] \u001b[0;2m\u001b[mSAYHELLO_FILE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 0 of 1\u001b[K\n",
       "\u001b[3A\n",
       "\u001b[2mexecutor >  local (1)\u001b[m\u001b[K\n",
-      "\u001b[2m[\u001b[0;34m80/d4799c\u001b[0;2m] \u001b[0;2m\u001b[mSAYHELLO_FILE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34me1/ec81a3\u001b[0;2m] \u001b[0;2m\u001b[mSAYHELLO_FILE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
       "\n"
      ]
     }
@@ -902,9 +902,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `basics_processes.nf` \u001b[0;2m[\u001b[0;1;36mromantic_goldstine\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36ma4d37946a5\u001b[m\n",
+      "\u001b[K\n",
+      "\u001b[2mexecutor >  local (1)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34mca/95c1f5\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 0 of 1\u001b[K\n",
+      "\u001b[3A\n",
+      "\u001b[2mexecutor >  local (1)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34mca/95c1f5\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "/Users/nilswaffenschmidt/waffenschmidt/notebooks/day_04/work/ca/95c1f558f6c7809858784f46c1fea1/file_uppercase.txt\u001b[K\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 5 - create a process that reads in a string and converts it to uppercase and saves it to a file as output. View the path to the file in the console\n",
     "!nextflow run basics_processes.nf --step 5"
@@ -912,9 +931,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `basics_processes.nf` \u001b[0;2m[\u001b[0;1;36mmagical_hypatia\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m9564460d88\u001b[m\n",
+      "\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m-        \u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE \u001b[2m |\u001b[m 0 of 1\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m-        \u001b[0;2m] \u001b[0;2m\u001b[mPRINTUPPER -\u001b[K\n",
+      "\u001b[3A\n",
+      "\u001b[2mexecutor >  local (2)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m8f/bac628\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m \u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m66/b9aca1\u001b[0;2m] \u001b[0;2m\u001b[mPRINTUPPER\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 0 of 1\u001b[K\n",
+      "\u001b[4A\n",
+      "\u001b[2mexecutor >  local (2)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m8f/bac628\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m \u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m66/b9aca1\u001b[0;2m] \u001b[0;2m\u001b[mPRINTUPPER\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "HELLO WORLD!\u001b[K\n",
+      "\u001b[K\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 6 - add another process that reads in the resulting file from UPPERCASE and print the content to the console (debug true).\n",
     "!nextflow run basics_processes.nf --step 6"
@@ -929,9 +973,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `basics_processes.nf` \u001b[0;2m[\u001b[0;1;36mserene_booth\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36mdf87106536\u001b[m\n",
+      "\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m-        \u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[2m |\u001b[m 0 of 1\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m-        \u001b[0;2m] \u001b[0;2m\u001b[mZIPFILE   -\u001b[K\n",
+      "\u001b[3A\n",
+      "\u001b[2mexecutor >  local (2)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m0f/fdd3cc\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34md1/15a97c\u001b[0;2m] \u001b[0;2m\u001b[mZIPFILE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m  \u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "  adding: file_uppercase.txt (stored 0%)\u001b[K\n",
+      "Zipped file created in: /Users/nilswaffenschmidt/waffenschmidt/notebooks/day_04/work/d1/15a97cbb623b6cc3b373052c152610\u001b[K\n",
+      "\u001b[K\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 7 - based on the paramater \"zip\" (see at the head of the file), create a process that zips the file created in the UPPERCASE process either in \"zip\", \"gzip\" OR \"bzip2\" format.\n",
     "#          Print out the path to the zipped file in the console\n",
@@ -940,9 +1006,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `basics_processes.nf` \u001b[0;2m[\u001b[0;1;36msad_planck\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m5001399790\u001b[m\n",
+      "\u001b[K\n",
+      "\u001b[2mexecutor >  local (1)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34md5/1802e9\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 0 of 1\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m-        \u001b[0;2m] \u001b[0;2m\u001b[mZIPALL        -\u001b[K\n",
+      "\u001b[4A\n",
+      "\u001b[2mexecutor >  local (2)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34md5/1802e9\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m06/25d0d2\u001b[0;2m] \u001b[0;2m\u001b[mZIPALL\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m   \u001b[2m |\u001b[m 0 of 1\u001b[K\n",
+      "\u001b[4A\n",
+      "\u001b[2mexecutor >  local (2)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34md5/1802e9\u001b[0;2m] \u001b[0;2m\u001b[mUPPERCASE\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m06/25d0d2\u001b[0;2m] \u001b[0;2m\u001b[mZIPALL\u001b[33;2m (\u001b[0;33m1\u001b[2m)\u001b[m   \u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "  adding: file_uppercase.txt (stored 0%)\u001b[K\n",
+      "File ziped created in: /Users/nilswaffenschmidt/waffenschmidt/notebooks/day_04/work/06/25d0d2f4a70764ff04d549f6f2d2dc\u001b[K\n",
+      "File gziped created in: /Users/nilswaffenschmidt/waffenschmidt/notebooks/day_04/work/06/25d0d2f4a70764ff04d549f6f2d2dc\u001b[K\n",
+      "File bziped2 created in: /Users/nilswaffenschmidt/waffenschmidt/notebooks/day_04/work/06/25d0d2f4a70764ff04d549f6f2d2dc\u001b[K\n",
+      "File \u001b[K\n",
+      "\u001b[K\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 8 - Create a process that zips the file created in the UPPERCASE process in \"zip\", \"gzip\" AND \"bzip2\" format. Print out the paths to the zipped files in the console\n",
     "!nextflow run basics_processes.nf --step 8"
@@ -950,24 +1046,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `basics_processes.nf` \u001b[0;2m[\u001b[0;1;36msleepy_coulomb\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m6ba40e624c\u001b[m\n",
+      "\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m-        \u001b[0;2m] \u001b[0;2m\u001b[mWRITE_FILE -\u001b[K\n",
+      "\u001b[2A\n",
+      "\u001b[2mexecutor >  local (1)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m32/e46319\u001b[0;2m] \u001b[0;2m\u001b[mWRITE_FILE\u001b[2m |\u001b[m 1 of 1\u001b[32m ✔\u001b[m\u001b[K\n",
+      "Wrote file: /Users/nilswaffenschmidt/waffenschmidt/notebooks/day_04/work/32/e46319e670d79eaf218ed4d7e5380e/results/names.tsv\u001b[K\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    " # Task 9 - Create a process that reads in a list of names and titles from a channel and writes them to a file.\n",
-    "#           Store the file in the \"results\" directory under the name \"names.tsv\"\n",
+    "# Task 9 - Create a process that reads in a list of names and titles from a channel and writes them to a file.\n",
+    "#          Store the file in the \"results\" directory under the name \"names.tsv\"\n",
     "!nextflow run basics_processes.nf --step 9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Harry</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ron</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hermione</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albus</td>\n",
+       "      <td>headmaster</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Snape</td>\n",
+       "      <td>teacher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Hagrid</td>\n",
+       "      <td>groundkeeper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Dobby</td>\n",
+       "      <td>hero</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name         title\n",
+       "0     Harry       student\n",
+       "1       Ron       student\n",
+       "2  Hermione       student\n",
+       "3     Albus    headmaster\n",
+       "4     Snape       teacher\n",
+       "5    Hagrid  groundkeeper\n",
+       "6     Dobby          hero"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"results/names.tsv\", sep=\"\\t\")\n",
+    "df = pd.read_csv(\"/Users/nilswaffenschmidt/waffenschmidt/notebooks/day_04/work/32/e46319e670d79eaf218ed4d7e5380e/results/names.tsv\", sep=\"\\t\")\n",
     "df"
    ]
   },
@@ -996,9 +1191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `advanced_channel_operations.nf` \u001b[0;2m[\u001b[0;1;36mfurious_angela\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m21ee73aef4\u001b[m\n",
+      "\u001b[K\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 1 - Read in the samplesheet.\n",
     "\n",
