notebook day 1 finished

--- a/notebooks/day_01/day_01.ipynb
+++ b/notebooks/day_01/day_01.ipynb
@@ -128,7 +128,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Still needs to be done."
+    "Main features of nf-core pipelines include:\n",
+    "\n",
+    "- Reproducibility (Same output with same inputs)\n",
+    "- Portability (able run on different environemnts)\n",
+    "- Standardization (follow strict guidelines, same structure, etc)\n",
+    "- Version control (version of modules always well documented)\n",
+    "- Automated testing \n",
+    "- Good documentation\n",
+    "- Community support"
    ]
   },
   {
