notebook day 2 part 1 final

--- a/notebooks/day_02/day_02.ipynb
+++ b/notebooks/day_02/day_02.ipynb
@@ -637,18 +637,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I would look into the methods section and try to reproduce the steps explained there. Naively, I would probably try to do this manually from command line, first without integrating the different steps into a coherent workflow. As version of used tools are not described, I would probably just try my luck with standard/latest versions. Even though, I know, that this approach might not lead to identical results...\n"
+   ]
   }
  ],
  "metadata": {
