notebook day 2 part 2 final

--- a/notebooks/day_02/day_02_part2.ipynb
+++ b/notebooks/day_02/day_02_part2.ipynb
@@ -174,10 +174,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- -profile\n",
-    "- --input \n",
-    "- --output\n",
-    "- --genome GRCm38 "
+    "- -profile docker, arm64 (tried to use docker and mac m1 specific options)\n",
+    "- --input ... (manually set input path)\n",
+    "- --output ... (manually set output path)\n",
+    "- --genome GRCm38 (respective standard mouse genome is downloaded by pipeline and used automatically)"
    ]
   },
   {
@@ -185,6 +185,13 @@
    "metadata": {},
    "source": [
     "## Browsing the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\rightarrow$ Pipeline didnt run through due to issues with internet/simultaneous usage..."
    ]
   },
   {
@@ -225,11 +232,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We might exclude outlier."
+   ]
   },
   {
    "cell_type": "markdown",
