day 3 notebooks and csv

--- a/notebooks/day_03/day_03.ipynb
+++ b/notebooks/day_03/day_03.ipynb
@@ -216,7 +216,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Not really..."
+   ]
   },
   {
    "cell_type": "markdown",
