--- a/notebooks/day_03_part2/docker.ipynb
+++ b/notebooks/day_03_part2/docker.ipynb
@@ -460,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After one gets used to how to mount and stuff, then maybe doing it with the help of containers might be easier."
+    "After one gets used to how to mount and stuff, then maybe doing it with the help of containers might be easier. For now, approach without docker is easier for sure."
    ]
   },
   {
@@ -7838,11 +7838,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "General ways to create Docker or Apptainer images:\n",
+    "- From a Dockerfile / Singularity recipe: Standard method, defines base image, packages, and commands.\n",
+    "- From an existing container: docker commit or apptainer build from a running container.\n",
+    "- From a base image + conda or pip environment: Build lightweight images with only needed packages.\n",
+    "- Using automated build services: GitHub Actions, Docker Hub automated builds.\n",
+    "- Using prebuilt images: Pull official or community images and modify if needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seqera is a leading provider of open-source workflow orchestration software, enabling data pipeline processing, cloud infrastructure management, and secure collaboration.\n",
+    "\n",
+    "Seqera is the company behind Nextflow and has supported the nf-core community from its very beginning.\n",
+    "\n",
+    "In particular, Seqera assists nf-core by:\n",
+    "- Organizing events and covering associated costs\n",
+    "- Hosting and maintaining the nf-core website\n",
+    "- Employing several key contributors\n",
+    "- Providing a Seqera Cloud Pro account for launching and managing full-scale release tests\n",
+    "- Developing and maintaining Nextflow"
+   ]
   }
  ],
  "metadata": {
