Notebook day 4 final

--- a/notebooks/day_04/day_04.ipynb
+++ b/notebooks/day_04/day_04.ipynb
@@ -1191,18 +1191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[33mNextflow 25.10.0 is available - Please consider updating your version to it\u001b[m\n",
       "\n",
       "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
       "\u001b[K\n",
-      "Launching\u001b[35m `advanced_channel_operations.nf` \u001b[0;2m[\u001b[0;1;36mfurious_angela\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m21ee73aef4\u001b[m\n",
-      "\u001b[K\n"
+      "Launching\u001b[35m `advanced_channel_operations.nf` \u001b[0;2m[\u001b[0;1;36mexotic_turing\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m9359b27fc7\u001b[m\n",
+      "\u001b[K\n",
+      "[sample:CONTROL_REP1, fastq_1:fq_1_R1.fastq.gz, fastq_2:fq_1_R2.fastq.gz, strandedness:auto]\n",
+      "[sample:CONTROL_REP2, fastq_1:fq_2_R1.fastq.gz, fastq_2:fq_2_R2.fastq.gz, strandedness:forward]\n",
+      "[sample:CONTROL_REP3, fastq_1:fq_3_R1.fastq.gz, fastq_2:fq_3_R2.fastq.gz, strandedness:reverse]\n",
+      "[sample:CONTROL_REP1, fastq_1:fq_4_R1.fastq.gz, fastq_2:fq_4_R2.fastq.gz, strandedness:auto]\n"
      ]
     }
    ],
@@ -1214,9 +1219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mNextflow 25.10.0 is available - Please consider updating your version to it\u001b[m\n",
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `advanced_channel_operations.nf` \u001b[0;2m[\u001b[0;1;36mexotic_gutenberg\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m9359b27fc7\u001b[m\n",
+      "\u001b[K\n",
+      "[[id:CONTROL_REP1, strandedness:auto], [fq_1_R1.fastq.gz, fq_1_R2.fastq.gz]]\n",
+      "[[id:CONTROL_REP2, strandedness:forward], [fq_2_R1.fastq.gz, fq_2_R2.fastq.gz]]\n",
+      "[[id:CONTROL_REP3, strandedness:reverse], [fq_3_R1.fastq.gz, fq_3_R2.fastq.gz]]\n",
+      "[[id:CONTROL_REP1, strandedness:auto], [fq_4_R1.fastq.gz, fq_4_R2.fastq.gz]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 2 - Read in the samplesheet and create a meta-map with all metadata and another list with the filenames ([[metadata_1 : metadata_1, ...], [fastq_1, fastq_2]]).\n",
     "#          Set the output to a new channel \"in_ch\" and view the channel. YOU WILL NEED TO COPY AND PASTE THIS CODE INTO SOME OF THE FOLLOWING TASKS (sorry for that).\n",
@@ -1226,9 +1248,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mNextflow 25.10.0 is available - Please consider updating your version to it\u001b[m\n",
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `advanced_channel_operations.nf` \u001b[0;2m[\u001b[0;1;36mfabulous_heisenberg\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m9359b27fc7\u001b[m\n",
+      "\u001b[K\n",
+      "AUTO: [[id:CONTROL_REP1, strandedness:auto], [fq_1_R1.fastq.gz, fq_1_R2.fastq.gz]]\n",
+      "REVERSE: [[id:CONTROL_REP3, strandedness:reverse], [fq_3_R1.fastq.gz, fq_3_R2.fastq.gz]]\n",
+      "FORWARD: [[id:CONTROL_REP2, strandedness:forward], [fq_2_R1.fastq.gz, fq_2_R2.fastq.gz]]\n",
+      "AUTO: [[id:CONTROL_REP1, strandedness:auto], [fq_4_R1.fastq.gz, fq_4_R2.fastq.gz]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 3 - Now we assume that we want to handle different \"strandedness\" values differently. \n",
     "#          Split the channel into the right amount of channels and write them all to stdout so that we can understand which is which.\n",
@@ -1238,9 +1277,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mNextflow 25.10.0 is available - Please consider updating your version to it\u001b[m\n",
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `advanced_channel_operations.nf` \u001b[0;2m[\u001b[0;1;36mmighty_mirzakhani\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36m9359b27fc7\u001b[m\n",
+      "\u001b[K\n",
+      "SAMPLE: CONTROL_REP1, STRANDEDNESS: auto -> FILES: [[fq_1_R1.fastq.gz, fq_1_R2.fastq.gz], [fq_4_R1.fastq.gz, fq_4_R2.fastq.gz]]\n",
+      "SAMPLE: CONTROL_REP2, STRANDEDNESS: forward -> FILES: [[fq_2_R1.fastq.gz, fq_2_R2.fastq.gz]]\n",
+      "SAMPLE: CONTROL_REP3, STRANDEDNESS: reverse -> FILES: [[fq_3_R1.fastq.gz, fq_3_R2.fastq.gz]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Task 4 - Group together all files with the same sample-id and strandedness value.\n",
     "\n",
@@ -1263,9 +1318,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mNextflow 25.10.0 is available - Please consider updating your version to it\u001b[m\n",
+      "\n",
+      "\u001b[1m\u001b[38;5;232m\u001b[48;5;43m N E X T F L O W \u001b[0;2m  ~  \u001b[mversion 25.04.7\u001b[m\n",
+      "\u001b[K\n",
+      "Launching\u001b[35m `link_p_c.nf` \u001b[0;2m[\u001b[0;1;36mdetermined_baekeland\u001b[0;2m] DSL2 - \u001b[36mrevision: \u001b[0;36mff463e58b6\u001b[m\n",
+      "\u001b[K\n",
+      "\u001b[2mexecutor >  local (2)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m2b/7b148e\u001b[0;2m] \u001b[0;2m\u001b[mSPLITLETTERS\u001b[33;2m (\u001b[0;33m2\u001b[2m)\u001b[m\u001b[2m |\u001b[m 0 of 2\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m-        \u001b[0;2m] \u001b[0;2m\u001b[mCONVERTTOUPPER   -\u001b[K\n",
+      "\u001b[4A\n",
+      "\u001b[2mexecutor >  local (10)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m2b/7b148e\u001b[0;2m] \u001b[0;2m\u001b[mSPLITLETTERS\u001b[33;2m (\u001b[0;33m2\u001b[2m)\u001b[m  \u001b[2m |\u001b[m 2 of 2\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m02/7120e5\u001b[0;2m] \u001b[0;2m\u001b[mCONVERTTOUPPER\u001b[33;2m (\u001b[0;33m6\u001b[2m)\u001b[m\u001b[2m |\u001b[m 0 of 11\u001b[K\n",
+      "\u001b[4A\n",
+      "\u001b[2mexecutor >  local (13)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m2b/7b148e\u001b[0;2m] \u001b[0;2m\u001b[mSPLITLETTERS\u001b[33;2m (\u001b[0;33m2\u001b[2m)\u001b[m  \u001b[2m |\u001b[m 2 of 2\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m43/48df26\u001b[0;2m] \u001b[0;2m\u001b[mCONVERTTOUPPER\u001b[33;2m (\u001b[0;33m9\u001b[2m)\u001b[m\u001b[2m |\u001b[m 11 of 11\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[4A\n",
+      "\u001b[2mexecutor >  local (13)\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m2b/7b148e\u001b[0;2m] \u001b[0;2m\u001b[mSPLITLETTERS\u001b[33;2m (\u001b[0;33m2\u001b[2m)\u001b[m  \u001b[2m |\u001b[m 2 of 2\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\u001b[2m[\u001b[0;34m43/48df26\u001b[0;2m] \u001b[0;2m\u001b[mCONVERTTOUPPER\u001b[33;2m (\u001b[0;33m9\u001b[2m)\u001b[m\u001b[2m |\u001b[m 11 of 11\u001b[32m ✔\u001b[m\u001b[K\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!nextflow run link_p_c.nf"
    ]
@@ -1278,11 +1362,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Each input string is split into multiple chunks, producing files like results/<prefix>_chunk_aaa.txt, results/<prefix>_chunk_aab.txt, results/<prefix>_chunk_aac.txt, and so on. The exact number of files depends on the string length and block size."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1292,88 +1376,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The process runs once for every chunk file in the input channel. Since each original string produces multiple chunks, CONVERTTOUPPER is executed multiple times."
+   ]
   }
  ],
  "metadata": {
